--- a/lib/vclog/templates/changelog.xml
+++ b/lib/vclog/templates/changelog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
-<% if xsl %>
-<?xml-stylesheet href="#{xsl}" type="text/xsl" ?>
+<% if options.stylesheet %>
+<?xml-stylesheet href="#{options.stylesheet}" type="text/xsl" ?>
 <% end %>
 <changelog title="<%= title %>">
-  <% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
+  <% changelog.changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
   <commit>
     <revision>#<%= h entry.revision %></revision>
     <date><%= entry.date %></date>
