--- a/lib/vclog/templates/history.xml.erb
+++ b/lib/vclog/templates/history.xml.erb
@@ -13,7 +13,7 @@
     <message><%= h tag.message %></message>
 
     <% release.groups.each do |number, changes| %>
-    <commit-group type="<%= changes[0].type %>" label="<%= changes[0].type_phrase %>">
+    <commit-group type="<%= changes[0].type %>" label="<%= changes[0].label %>">
       <% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
       <commit>
         <revision>#<%= h entry.revision %></revision>
