--- a/rdoc/lib/vclog/templates/history_json_rb.html
+++ b/rdoc/lib/vclog/templates/history_json_rb.html
@@ -5,17 +5,17 @@
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
-  <title>File: metadata.rb [VCLog]</title>
+  <title>File: history.json.rb [VCLog]</title>
 
-  <link rel="SHORTCUT ICON" href="../../assets/icon/file.png">
+  <link rel="SHORTCUT ICON" href="../../../assets/icon/file.png">
 
-  <link type="text/css" rel="stylesheet" href="../../assets/rdoc.css" media="screen" />
-  <link type="text/css" rel="stylesheet" href="../../assets/highlight/styles/github.css" title="GitHub" />
+  <link type="text/css" rel="stylesheet" href="../../../assets/rdoc.css" media="screen" />
+  <link type="text/css" rel="stylesheet" href="../../../assets/highlight/styles/github.css" title="GitHub" />
 
-  <script type="text/javascript" charset="utf-8" src="../../assets/jquery.js"></script>
-  <script type="text/javascript" charset="utf-8" src="../../assets/highlight/highlight.pack.js"></script>
-  <script type="text/javascript" charset="utf-8" src="../../assets/quicksearch.js"></script>
-  <script type="text/javascript" charset="utf-8" src="../../assets/main.js"></script>
+  <script type="text/javascript" charset="utf-8" src="../../../assets/jquery.js"></script>
+  <script type="text/javascript" charset="utf-8" src="../../../assets/highlight/highlight.pack.js"></script>
+  <script type="text/javascript" charset="utf-8" src="../../../assets/quicksearch.js"></script>
+  <script type="text/javascript" charset="utf-8" src="../../../assets/main.js"></script>
 
   <script type="text/javascript">
     $(document).ready( function() {
@@ -35,9 +35,9 @@
 
   <div class="head">
     <h1>
-      <img src="../../assets/icon/file.png" align="absmiddle">&nbsp;
-      <a href="../../index.html">VCLog</a>&nbsp;
-      <a href="/">metadata.rb</a>
+      <img src="../../../assets/icon/file.png" align="absmiddle">&nbsp;
+      <a href="../../../index.html">VCLog</a>&nbsp;
+      <a href="/">history.json.rb</a>
     </h1>
   </div>
 
@@ -46,7 +46,7 @@
       <h3 class="section-header">File Stats</h3>
       <dl>
         <dt class="modified-date">Last Modified</dt>
-        <dd class="modified-date">Mon Jun 21 08:43:13 -0400 2010</dd>
+        <dd class="modified-date">Mon Jun 21 10:46:30 -0400 2010</dd>
 
         
 
@@ -61,13 +61,13 @@
         <h3 class="section-header">Information</h3>
         <ul>
         
-          <li class="file"><a href="../../PROFILE.html">PROFILE</a></li>
+          <li class="file"><a href="../../../PROFILE.html">PROFILE</a></li>
         
-          <li class="file"><a href="../../HISTORY_rdoc.html">HISTORY.rdoc</a></li>
+          <li class="file"><a href="../../../HISTORY_rdoc.html">HISTORY.rdoc</a></li>
         
-          <li class="file"><a href="../../LICENSE.html">LICENSE</a></li>
+          <li class="file"><a href="../../../LICENSE.html">LICENSE</a></li>
         
-          <li class="file"><a href="../../README_rdoc.html">README.rdoc</a></li>
+          <li class="file"><a href="../../../README_rdoc.html">README.rdoc</a></li>
         
         </ul>
       </div>
@@ -75,7 +75,7 @@
 
       <div id="classindex-section" class="section project-section">
         <h3 class="section-header">Class Index
-          <span class="search-toggle"><img src="../../assets/icon/find.png"
+          <span class="search-toggle"><img src="../../../assets/icon/find.png"
             height="16" width="16" alt="[+]"
             title="show/hide quicksearch" /></span></h3>
         <form action="#" method="get" accept-charset="utf-8" class="initially-hidden">
@@ -88,65 +88,65 @@
 
         <ul class="link-list">
         
-          <li class="module"><a href="../../VCLog.html">VCLog</a></li>
+          <li class="module"><a href="../../../VCLog.html">VCLog</a></li>
         
-          <li class="module"><a href="../../VCLog/Adapters.html">VCLog::Adapters</a></li>
+          <li class="module"><a href="../../../VCLog/Adapters.html">VCLog::Adapters</a></li>
         
-          <li class="class"><a href="../../VCLog/Adapters/Abstract.html">VCLog::Adapters::Abstract</a></li>
+          <li class="class"><a href="../../../VCLog/Adapters/Abstract.html">VCLog::Adapters::Abstract</a></li>
         
-          <li class="class"><a href="../../VCLog/Adapters/Darcs.html">VCLog::Adapters::Darcs</a></li>
+          <li class="class"><a href="../../../VCLog/Adapters/Darcs.html">VCLog::Adapters::Darcs</a></li>
         
-          <li class="class"><a href="../../VCLog/Adapters/Git.html">VCLog::Adapters::Git</a></li>
+          <li class="class"><a href="../../../VCLog/Adapters/Git.html">VCLog::Adapters::Git</a></li>
         
-          <li class="class"><a href="../../VCLog/Adapters/Hg.html">VCLog::Adapters::Hg</a></li>
+          <li class="class"><a href="../../../VCLog/Adapters/Hg.html">VCLog::Adapters::Hg</a></li>
         
-          <li class="class"><a href="../../VCLog/Adapters/Svn.html">VCLog::Adapters::Svn</a></li>
+          <li class="class"><a href="../../../VCLog/Adapters/Svn.html">VCLog::Adapters::Svn</a></li>
         
-          <li class="module"><a href="../../VCLog/CLI.html">VCLog::CLI</a></li>
+          <li class="module"><a href="../../../VCLog/CLI.html">VCLog::CLI</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/Abstract.html">VCLog::CLI::Abstract</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/Abstract.html">VCLog::CLI::Abstract</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/Bump.html">VCLog::CLI::Bump</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/Bump.html">VCLog::CLI::Bump</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/Changelog.html">VCLog::CLI::Changelog</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/Changelog.html">VCLog::CLI::Changelog</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/Help.html">VCLog::CLI::Help</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/Help.html">VCLog::CLI::Help</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/History.html">VCLog::CLI::History</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/History.html">VCLog::CLI::History</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/List.html">VCLog::CLI::List</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/List.html">VCLog::CLI::List</a></li>
         
-          <li class="class"><a href="../../VCLog/CLI/Version.html">VCLog::CLI::Version</a></li>
+          <li class="class"><a href="../../../VCLog/CLI/Version.html">VCLog::CLI::Version</a></li>
         
-          <li class="class"><a href="../../VCLog/Change.html">VCLog::Change</a></li>
+          <li class="class"><a href="../../../VCLog/Change.html">VCLog::Change</a></li>
         
-          <li class="class"><a href="../../VCLog/ChangeLog.html">VCLog::ChangeLog</a></li>
+          <li class="class"><a href="../../../VCLog/ChangeLog.html">VCLog::ChangeLog</a></li>
         
-          <li class="class"><a href="../../VCLog/Config.html">VCLog::Config</a></li>
+          <li class="class"><a href="../../../VCLog/Config.html">VCLog::Config</a></li>
         
-          <li class="class"><a href="../../VCLog/Formatter.html">VCLog::Formatter</a></li>
+          <li class="class"><a href="../../../VCLog/Formatter.html">VCLog::Formatter</a></li>
         
-          <li class="class"><a href="../../VCLog/Heuristics.html">VCLog::Heuristics</a></li>
+          <li class="class"><a href="../../../VCLog/Heuristics.html">VCLog::Heuristics</a></li>
         
-          <li class="class"><a href="../../VCLog/Heuristics/Label.html">VCLog::Heuristics::Label</a></li>
+          <li class="class"><a href="../../../VCLog/Heuristics/Label.html">VCLog::Heuristics::Label</a></li>
         
-          <li class="class"><a href="../../VCLog/Heuristics/Rule.html">VCLog::Heuristics::Rule</a></li>
+          <li class="class"><a href="../../../VCLog/Heuristics/Rule.html">VCLog::Heuristics::Rule</a></li>
         
-          <li class="class"><a href="../../VCLog/History.html">VCLog::History</a></li>
+          <li class="class"><a href="../../../VCLog/History.html">VCLog::History</a></li>
         
-          <li class="module"><a href="../../VCLog/Kernel.html">VCLog::Kernel</a></li>
+          <li class="module"><a href="../../../VCLog/Kernel.html">VCLog::Kernel</a></li>
         
-          <li class="class"><a href="../../VCLog/Metadata.html">VCLog::Metadata</a></li>
+          <li class="class"><a href="../../../VCLog/Metadata.html">VCLog::Metadata</a></li>
         
-          <li class="class"><a href="../../VCLog/Release.html">VCLog::Release</a></li>
+          <li class="class"><a href="../../../VCLog/Release.html">VCLog::Release</a></li>
         
-          <li class="class"><a href="../../VCLog/Tag.html">VCLog::Tag</a></li>
+          <li class="class"><a href="../../../VCLog/Tag.html">VCLog::Tag</a></li>
         
-          <li class="module"><a href="../../Syckle.html">Syckle</a></li>
+          <li class="module"><a href="../../../Syckle.html">Syckle</a></li>
         
-          <li class="module"><a href="../../Syckle/Plugins.html">Syckle::Plugins</a></li>
+          <li class="module"><a href="../../../Syckle/Plugins.html">Syckle::Plugins</a></li>
         
-          <li class="class"><a href="../../Syckle/Plugins/VClog.html">Syckle::Plugins::VClog</a></li>
+          <li class="class"><a href="../../../Syckle/Plugins/VClog.html">Syckle::Plugins::VClog</a></li>
         
         </ul>
         <div id="no-class-search-results" style="display: none;">No matching classes.</div>
@@ -1070,7 +1070,7 @@
     <div id="validator-badges">
       
       <div style="float: right; margin-right: 5px;">
-        <a href="http://validator.w3.org/check/referer"><img src="../../assets/icon/check.png" alt="[Validate]" height="16" width="16" /></a>
+        <a href="http://validator.w3.org/check/referer"><img src="../../../assets/icon/check.png" alt="[Validate]" height="16" width="16" /></a>
       </div>
       Generated with <a href="http://proutils.github.com/webri">WebRI Redfish</a> 1.2.1
       <br/><br/>
