--- a/lib/vclog/templates/history.atom.erb
+++ b/lib/vclog/templates/history.atom.erb
@@ -1,46 +1,84 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 
 <feed xmlns="http://www.w3.org/2005/Atom">
 
   <title><%= title %> Feed</title>
+
   <subtitle>Release History</subtitle>
+
   <% if url %><link href="<%= url %>" rel="self" /><% end %>
+ 
   <% if homepage %><link href="<%= homepage %>" /><% end %>
+
   <id><% if vcs.uuid %>urn:uuid:<%= vcs.uuid %><% else %><%= vcs.repository %><% end %></id>
+
   <updated><%= Time.now %></updated>
+
   <author>
+
     <name><%= user %></name>
+
     <email><%= email %></email>
+
   </author>
 
-  <% history.releases.sort.each do |release| %>
-  <% tag = release.tag %>
+<% history.releases.sort.each do |release| %>
+
+<% tag = release.tag %>
+
   <entry>
-    <title><%= tag.name %></title>
-    <id><%= tag.revision %></id>
-    <author><%= tag.author %></author>
-    <updated><%= tag.date.strftime('%Y-%m-%d') %></updated>
-    <summary type="html">
-      <p><%= tag.message %></p>
-      <% if options.extra %>
-        <% release.groups.each do |number, changes| %>
-          <h2><%= changes.size %> <%= changes[0].label %></h2>
-          <ul class="log">
-          <% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
-            <li class="entry">
-            <div class="message"><%= h entry.message %></div>
-            <!-- <div class="type"><%= h entry.type %></div> -->
-            <div class="revision">#<%= h entry.revision %></div>
-            <div class="date"><%= entry.date %></div>
-            <div class="author"><%= h entry.author %></div>
-            </li>
-          <% end %>
-          </ul>
-        <% end %>
-      <% end %>
-    </summary>
+
+    <title><%= h tag.name %></title>
+
+    <id><%= url %>#<%= tag.revision %></id>
+
+    <author><%= h tag.author %></author>
+
+    <updated><%= tag.date.strftime('%Y-%m-%d %H:%M:%S') %></updated>
+
+    <summary><%= h tag.message %></summary>
+
+    <content type="xhtml">
+
+      <div xmlns="http://www.w3.org/1999/xhtml">
+
+        <p><%= tag.message %></p>
+
+<% if options.extra %>
+
+<% release.groups.each do |number, changes| %>
+
+        <h2><%= changes.size %> <%= changes[0].label %></h2>
+
+        <ul class="log">
+
+<% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
+
+          <li class="entry">
+
+            <%= entry.message.rstrip %><br/>
+
+            <%= entry.author %> <%= entry.date.strftime('%Y-%m-%d %H:%M:%S') %>
+
+            <% if options.revision %>(#<%= entry.revision %>)<% end %>
+
+          </li>
+
+<% end %>
+
+        </ul>
+
+<% end %>
+
+<% end %>
+
+      </div>
+
+    </content>
+
   </entry>
-  <% end %>
+
+<% end %>
 
 </feed>
 
