--- a/lib/vclog/templates/history.rss.erb
+++ b/lib/vclog/templates/history.rss.erb
@@ -32,9 +32,9 @@
 
     <item>
 
-      <title><%= h tag.name %></title>
+      <title><%= tag.name %></title>
 
-      <author><%= h tag.author %></author>
+      <author><%= tag.author %></author>
 
       <link><%= url %>#<%= tag.revision %></link>
 
