Refactor cli as separate bin files and history as log option.

--- a/lib/vclog/templates/changelog.atom.erb
+++ b/lib/vclog/templates/changelog.atom.erb
@@ -26,7 +26,7 @@
 
     <title><%= h entry.message.lines.first.rstrip %></title>
 
-    <id><%= url %>#<%= entry.revision %></id>
+    <id><%= url %>#<%= entry.id %></id>
 
     <author><%= entry.author %></author>
 
