--- a/lib/vclog/templates/changelog.html.erb
+++ b/lib/vclog/templates/changelog.html.erb
@@ -29,7 +29,7 @@
       <div class="author"><%= h entry.author %></div>
       <div class="type"><%= h entry.type %></div>
       <div class="message"><%= h entry.message %></div>
-      <div class="revision">#<%= h entry.revision %></div>
+      <div class="id">#<%= h entry.id %></div>
     </li>
     <% end %>
     </ul>
