--- a/lib/vclog/templates/history.atom.erb
+++ b/lib/vclog/templates/history.atom.erb
@@ -60,7 +60,7 @@
 
             <%= entry.author %> <%= entry.date.strftime('%Y-%m-%d %H:%M:%S') %>
 
-            <% if options.revision %>(#<%= entry.revision %>)<% end %>
+            <% if options.reference %>(#<%= entry.id %>)<% end %>
 
           </li>
 
