--- a/lib/vclog/templates/changelog.xml.erb
+++ b/lib/vclog/templates/changelog.xml.erb
@@ -5,7 +5,7 @@
 <changelog title="<%= title %>">
   <% changelog.changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
   <commit>
-    <revision>#<%= h entry.revision %></revision>
+    <id>#<%= h entry.id %></id>
     <date><%= entry.date %></date>
     <author><%= h entry.author %></author>
     <type><%= h entry.type %></type>
