--- a/lib/vclog/templates/history.html.erb
+++ b/lib/vclog/templates/history.html.erb
@@ -37,7 +37,7 @@
           <%= h entry.message.strip %>
         </div>
         <!-- <div class="type"><%= h entry.type %></div> -->
-        <div class="revision">#<%= h entry.revision %></div>
+        <div class="id">#<%= h entry.id %></div>
         <div class="date"><%= entry.date %></div>
         <div class="author"><%= h entry.author %></div>
       </li>
