--- a/lib/vclog/templates/changelog.xml.erb
+++ b/lib/vclog/templates/changelog.xml.erb
@@ -9,6 +9,7 @@
     <date><%= entry.date %></date>
     <author><%= h entry.author %></author>
     <type><%= h entry.type %></type>
+    <summary><%= h entry.summary %></message>
     <message><%= h entry.message %></message>
   </commit>
   <% end %>
