--- a/lib/vclog/templates/history.xml.erb
+++ b/lib/vclog/templates/history.xml.erb
@@ -20,6 +20,7 @@
         <date><%= entry.date %></date>
         <author><%= h entry.author %></author>
         <type><%= h entry.type %></type>
+        <summary><%= h entry.summary %></summary>
         <message><%= h entry.message.strip %></message>
       </commit>
       <% end %>
