Improve command line interface, adjusting names of options.

--- a/lib/vclog/templates/changelog.atom.erb
+++ b/lib/vclog/templates/changelog.atom.erb
@@ -24,7 +24,7 @@
 
   <entry>
 
-    <title><%= h entry.message.lines.first.rstrip %></title>
+    <title><%= h entry.summary %></title>
 
     <id><%= url %>#<%= entry.id %></id>
 
