--- a/lib/vclog/templates/history.html.erb
+++ b/lib/vclog/templates/history.html.erb
@@ -26,7 +26,7 @@
 
     <h1><%= tag.name %> / <%= tag.date.strftime('%Y-%m-%d') %></h1>
     <p><%= tag.message %></p>
-<%   if options.extra %>
+<%   if !options.summary %>
 <%     release.groups.each do |number, changes| %>
 
     <h2><%= changes.size %> <%= changes[0].label %></h2>
@@ -34,7 +34,14 @@
 <%       changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
       <li class="entry">
         <div class="message">
-          <%= h entry.message.strip %>
+          <div class="summary"><%= h entry.summary %></summary>
+<% if entry.details.empty? %>
+          <div class="details"></div>
+<% else %>
+          <div class="details">
+<%= r entry.details %>
+          </div>
+<% end %>
         </div>
         <!-- <div class="type"><%= h entry.type %></div> -->
         <div class="id">#<%= h entry.id %></div>
