--- a/lib/vclog/templates/history.rss.erb
+++ b/lib/vclog/templates/history.rss.erb
@@ -46,7 +46,7 @@
 
         <p><%= tag.message %></p>
 
-<% if options.extra %>
+<% if !options.summary %>
 
 <% release.groups.each do |number, changes| %>
 
