--- a/lib/vclog/templates/changelog.rss.erb
+++ b/lib/vclog/templates/changelog.rss.erb
@@ -29,7 +29,7 @@
 <% changelog.changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
 
     <item>
-      <title><%= h entry.message.lines.first.rstrip %></title>
+      <title><%= h entry.summary %></title>
 
       <author><%= entry.author %></author>
 
