--- a/lib/vclog/templates/changelog.xml.erb
+++ b/lib/vclog/templates/changelog.xml.erb
@@ -5,12 +5,23 @@
 <changelog title="<%= title %>">
   <% changelog.changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
   <commit>
-    <id>#<%= h entry.id %></id>
+    <id><%= h entry.id %></id>
     <date><%= entry.date %></date>
     <author><%= h entry.author %></author>
     <type><%= h entry.type %></type>
-    <summary><%= h entry.summary %></message>
-    <message><%= h entry.message %></message>
+    <message>
+      <summary><%= h entry.summary %></summary>
+<% if entry.details.empty? %>
+      <details></details>
+<% else %>
+      <details>
+<![CDATA[
+<%= h entry.details %>
+
+]]>
+      </details>
+<% end %>
+    </message>
   </commit>
   <% end %>
 </changelog>
