--- a/lib/vclog/templates/history.atom.erb
+++ b/lib/vclog/templates/history.atom.erb
@@ -44,7 +44,7 @@
 
         <p><%= tag.message %></p>
 
-<% if options.extra %>
+<% if !options.summary %>
 
 <% release.groups.each do |number, changes| %>
 
