--- a/lib/vclog/templates/history.xml.erb
+++ b/lib/vclog/templates/history.xml.erb
@@ -16,12 +16,23 @@
     <commit-group type="<%= changes[0].type %>" label="<%= changes[0].label %>">
       <% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
       <commit>
-        <id>#<%= h entry.revision %></id>
+        <id><%= h entry.revision %></id>
         <date><%= entry.date %></date>
         <author><%= h entry.author %></author>
         <type><%= h entry.type %></type>
-        <summary><%= h entry.summary %></summary>
-        <message><%= h entry.message.strip %></message>
+        <message>
+          <summary><%= h entry.summary %></summary>
+<% if entry.details.empty? %>
+          <details></details>
+<% else %>
+          <details>
+<![CDATA[
+<%= h entry.details %>
+
+]]>
+          </details>
+<% end %>
+        </message>
       </commit>
       <% end %>
     </commit-group>
