Refactor reporting code deprecating History class.

--- a/lib/vclog/templates/history.atom.erb
+++ b/lib/vclog/templates/history.atom.erb
@@ -22,7 +22,7 @@
 
   </author>
 
-<% history.releases.sort.each do |release| %>
+<% releases.sort.each do |release| %>
 
 <% tag = release.tag %>
 
