--- a/lib/vclog/templates/history.rss.erb
+++ b/lib/vclog/templates/history.rss.erb
@@ -26,7 +26,7 @@
 
     <webMaster><%= email %> (<%= user %>)</webMaster>
 
-<% history.releases.sort.each do |release| %>
+<% releases.sort.each do |release| %>
 
 <% tag = release.tag %>
 
